# baofzf

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yaml  cicd.yaml  release.yaml
.zed/: debug.json
src/: app.rs  kv.rs  main.rs
src/tests/: common.rs  kv.rs  mod.rs  openbao_testcontainer.rs
